gatekeeper-config/tests/fixtures/high-cpu-requests/pod-failure.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Pod
metadata:
  name: dummy
  namespace: default
  labels:
    greenhouse.sap/owned-by: my-team
spec:
  containers:
  - name: dummy-big
    image: alpine:3
    args: ["sleep", "86400"]
    resources:
      requests:
        cpu: "6"
        memory: 2Gi
  - name: dummy-small
    image: alpine:3
    args: ["sleep", "86400"]
    resources:
      requests:
        cpu: 64m
        memory: 64Mi
