gatekeeper-config/tests/fixtures/high-cpu-requests/pod-malformed-cpu.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Pod
metadata:
  name: dummy
  namespace: default
  labels:
    greenhouse.sap/owned-by: my-team
spec:
  containers:
  - name: dummy
    image: alpine:3
    args: ["sleep", "86400"]
    resources:
      requests:
        cpu: "500xyz"
        memory: 2Gi
