gatekeeper-config/tests/fixtures/high-cpu-requests/pod-no-limits.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Pod
metadata:
  name: dummy
  namespace: default
  labels:
    greenhouse.sap/owned-by: my-team
spec:
  containers:
  - name: dummy-1
    image: alpine:3
    args: ["sleep", "86400"]
  - name: dummy-2
    image: alpine:3
    args: ["sleep", "86400"]
