gatekeeper-config/tests/fixtures/libtest-add-support-labels/pod-filled.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  namespace: default
  labels:
    greenhouse.sap/owned-by: my-team
spec:
  containers:
  - name: dummy
    image: alpine:3
