gatekeeper-config/tests/fixtures/libtest-add-support-labels/pod-missing.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Pod
metadata:
  name: dummy
  namespace: default
spec:
  containers:
  - name: dummy
    image: alpine:3
