gatekeeper-config/tests/fixtures/libtest-traversal/cronjob.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: dummy
  namespace: default
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          labels:
            marker: "pod in cronjob"
        spec:
          containers:
          - name: alpine
            image: alpine:3
          initContainers:
          - name: init-busybox
            image: busybox:1
