gatekeeper-config/tests/fixtures/libtest-traversal/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: dummy
  namespace: default
spec:
  template:
    metadata:
      labels:
        marker: "pod in daemonset"
    spec:
      containers:
      - name: alpine
        image: alpine:3
      initContainers:
      - name: init-busybox
        image: busybox:1
