gatekeeper-config/tests/fixtures/libtest-traversal/job.yaml
# SPDX-FileCopyrightText: 2026 SAP SE or an SAP affiliate company and Greenhouse contributors
# SPDX-License-Identifier: Apache-2.0

apiVersion: batch/v1
kind: Job
metadata:
  name: dummy
  namespace: default
spec:
  template:
    metadata:
      labels:
        marker: "pod in job"
    spec:
      containers:
      - name: alpine
        image: alpine:3
